@@ -3,6 +3,7 @@
 -------------------------------------------------
 - added a function to GWEN_DBIO which allows to check whether a given file
   is supported by a given plugin
+- plugin descriptions now have a field for the filename
 
 
 ===========================================================================
